--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "mongoose": "^8.9.3",
     "prom-client": "^15.1.3",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2"
   }
 }
