--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,11 @@ on:
     branches:
       - main # Run build checks on PRs to main
 
+# read 
+permissions:
+  id-token: write
+  contents: read
+  
 jobs:
   format:
     if: startsWith(github.ref, 'refs/heads/feature/') # Only run on feature branches
