--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,12 @@
-name: Build and Deploy to ECS
+name: Deploy
 
 on:
-  release:
-    types: [published]
-
+  push:
+    branches-ignore:
+      - '**'
+    tags:
+      - 'v*.*.*'
+      - 'v*.*.*-*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -39,3 +42,15 @@ jobs:
           service: your-service-name # Replace with your ECS service name
           cluster: your-cluster-name # Replace with your ECS cluster name
           image: ${{ steps.login-ecr.outputs.registry }}/your-ecr-repo-name:latest
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t your-image-name:${{ github.event.release.tag_name }} .
+          docker tag your-image-name:${{ github.event.release.tag_name }} your-dockerhub-repo/your-image-name:${{ github.event.release.tag_name }}
+          docker push your-dockerhub-repo/your-image-name:${{ github.event.release.tag_name }}
