--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,11 +2,11 @@ name: Deploy
 
 on:
   push:
-    branches-ignore:
+    branches:
       - '**'
-    tags:
-      - 'v*.*.*'
-      - 'v*.*.*-*'
+    # tags:
+    #   - 'v*.*.*'
+    #   - 'v*.*.*-*'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -26,12 +26,13 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - run: docker build -t nodejs-demo .
+
       - name: Build and Push Docker Image to ECR
         env:
-          IMAGE_TAG: latest
-          ECR_REPOSITORY: your-ecr-repo-name # Replace with your ECR repo name
+          ECR_REPOSITORY: workspace/nodejs-demo # Replace with your ECR repo name
         run: |
-          IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:${IMAGE_TAG}"
+          IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:${{ github.ref_name }}"
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
 
@@ -43,14 +44,14 @@ jobs:
           cluster: your-cluster-name # Replace with your ECS cluster name
           image: ${{ steps.login-ecr.outputs.registry }}/your-ecr-repo-name:latest
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push Docker Image
-        run: |
-          docker build -t your-image-name:${{ github.event.release.tag_name }} .
-          docker tag your-image-name:${{ github.event.release.tag_name }} your-dockerhub-repo/your-image-name:${{ github.event.release.tag_name }}
-          docker push your-dockerhub-repo/your-image-name:${{ github.event.release.tag_name }}
+      # - name: Build and Push Docker Image
+      #   run: |
+      #     docker build -t your-image-name:${{ github.event.release.tag_name }} .
+      #     docker tag your-image-name:${{ github.event.release.tag_name }} your-dockerhub-repo/your-image-name:${{ github.event.release.tag_name }}
+      #     docker push your-dockerhub-repo/your-image-name:${{ github.event.release.tag_name }}
