--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           ECR_REPOSITORY: workspace/nodejs-demo # Replace with your ECR repo name
         run: |
-          IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:${{ github.ref_name }}"
+          IMAGE_URI="${{ steps.login-ecr.outputs.registry }}/${ECR_REPOSITORY}:${GITHUB_SHA::7}"
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
 
